# dAppreciate

./: .gitignore  deploy.sh  dfx.json
client/: .gitignore  dfx.json  package-lock.json  package.json
client/src/client/: main.mo
client/src/frontend/: api.did  package-lock.json  package.json  webpack.config.js
client/src/frontend/assets/: main.css
client/src/frontend/src/: API.js  API.purs  BigInt.purs  Main.purs  index.html
client/src/my_dappreciate/: main.mo  my_dappreciate.did
client_rs/: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json
client_rs/src/client_rs/: Cargo.toml  build.rs  build.sh  client_rs.did
client_rs/src/client_rs/src/: lib.rs
client_rs/src/client_rs/tests/: tests.sh
client_rs/src/frontend/: package-lock.json  package.json  spago.dhall  webpack.config.js
client_rs/src/frontend/src/: API.js  API.purs  BigInt.js  Main.purs
dapp/: README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
dapp/src/dapp/: main.mo
dapp/src/dapp_assets/src/: index.html  index.js
dapp/src/declarations/dapp/: dapp.did  dapp.did.d.ts  dapp.did.js  index.js
dapp/src/declarations/dapp_assets/: index.js
index/: README.md  dfx.json  package-lock.json  package.json  webpack.config.js
index/src/index/: main.mo
index_rs/: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
index_rs/src/frontend/: index.html  index.js
index_rs/src/index_rs/: Cargo.toml  build.rs  build.sh  index_rs.did
(+14 files in other folders)
