[package]
name = "client_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.13.0"
ic-cdk = "0.3.1"
ic-cdk-macros = "0.3.1"
serde = "1.0.130"
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_with = "1.6.2"
certified_map = { path = "../certified_map" }
hashtree = { path = "../hashtree" }

[build-dependencies]
sha2 = "0.9.1"
